[package]
name = "distributed_hashing"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.5" }
prost = "0.8.0"
bincode = "1.3.3"
bs58 = "0.5.1"
bytemuck = "1.16"
cached = "0.46.1"
chrono = "0.4.38"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.0"
drillx = "2.0.0"
futures = "0.3.30"
num_cpus = "1.16.0"
rand = "0.8.4"
prost-types = "0.8.0"

[build-dependencies]
tonic-build = "0.5"
prost-build = "0.8.0"